@@ -75,3 +75,4 @@ Version 1.18 (unreleased)
 * Add option to filter recent articles block by current tag, ie. dynamically.
 * If dynamic tag filtering is enabled on the recent articles block, but no results are available 
 for the current tag, the block will hide itself (block is not returned).
+* Allow filtering of untagged content
